@@ -18,7 +18,6 @@ import org.hyperledger.besu.ethereum.eth.sync.SynchronizerConfiguration;
 import org.hyperledger.besu.ethereum.eth.sync.snapsync.ImmutableSnapSyncConfiguration;
 import org.hyperledger.besu.ethereum.eth.sync.snapsync.SnapSyncConfiguration;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.google.common.collect.Range;
@@ -80,7 +79,7 @@ public class SynchronizerOptionsTest
                 .isSnapServerEnabled(Boolean.TRUE)
                 .isSnapSyncTransactionIndexingEnabled(Boolean.TRUE)
                 .build())
-        .snapSyncSavePreMergeHeadersOnlyEnabled(
+        .snapSyncSavePreCheckpointHeadersOnlyEnabled(
             SnapSyncConfiguration.DEFAULT_SNAP_SYNC_SAVE_PRE_MERGE_HEADERS_ONLY_ENABLED);
   }
 
@@ -96,7 +95,7 @@ public class SynchronizerOptionsTest
 
   @Override
   protected List<String> getFieldsToIgnore() {
-    return Arrays.asList("syncMinimumPeerCount");
+    return List.of("syncMinimumPeerCount");
   }
 
   @Override
